# alko_quiz

./: .gitignore  README.md  main.py  pyproject.toml
src/: all_riddles.py
static/: index.html  lariska.js  script.js  style.css
